--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>spark-core</module>
         <module>sprak-core-project</module>
+        <module>spark-sql</module>
     </modules>
     <dependencies>
         <dependency>
@@ -33,6 +34,12 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>1.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>2.1.1</version>
         </dependency>
 
     </dependencies>
