--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>spark-core</module>
         <module>sprak-core-project</module>
         <module>spark-sql</module>
+        <module>spark-sql-project</module>
     </modules>
     <dependencies>
         <dependency>
@@ -39,6 +40,18 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.27</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.11</artifactId>
             <version>2.1.1</version>
         </dependency>
 
