--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>sprak-core-project</module>
         <module>spark-sql</module>
         <module>spark-sql-project</module>
+        <module>spark-streaming</module>
     </modules>
     <dependencies>
         <dependency>
@@ -52,6 +53,19 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_2.11</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_2.11</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>
             <version>2.1.1</version>
         </dependency>
 
